ISTAKIBI-6952 Android Eğitim ve Öğrenimi + Dependeny injection için gerekli sınıfları yazdım + Filmleri internetten çekmek için gerekli sınıfları yazdım. Test ettim veriler geliyor.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,10 @@
     <style name="Base.Theme.MovieApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="backgroundColor">@color/bg_color_dark</item>
+    </style>
+    <style name="Theme.MovieApp.HeaderTextView">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/header_text_color_dark</item>
     </style>
 </resources>
