--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bg_color">#FFFFFF</color>
+    <color name="header_text_color">#2F2D2E</color>
+    <color name="bg_color_dark">#2F2D2E</color>
+    <color name="header_text_color_dark">#FFFFFF</color>
+
+
+
 </resources>
