--- a/app/src/main/res/drawable/circle_button_background.xml
+++ b/app/src/main/res/drawable/circle_button_background.xml
@@ -3,5 +3,6 @@
     android:shape="oval">
 
     <solid android:color="@color/white"/>
+    <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp"/>
 
 </shape>
