--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -12,8 +12,8 @@
         android:icon="@drawable/ic_search"
         />
     <item
-        android:id="@+id/profileFragment"
-        android:title="@string/profile_screen_title"
+        android:id="@+id/favouritesFragment"
+        android:title="@string/favourites_screen_title"
         android:icon="@drawable/ic_profile"
         />
 
