--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -36,11 +36,6 @@
             app:destination="@id/movieDetailFragment" />
     </fragment>
     <fragment
-        android:id="@+id/profileFragment"
-        android:name="com.okankkl.movieapp.ui.screen.profile.ProfileFragment"
-        android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
-    <fragment
         android:id="@+id/movieDetailFragment"
         android:name="com.okankkl.movieapp.ui.screen.movie_detail.MovieDetailFragment"
         android:label="fragment_movie_detail"
@@ -69,6 +64,15 @@
             android:defaultValue="0" />
         <action
             android:id="@+id/action_viewAllFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/favouritesFragment"
+        android:name="com.okankkl.movieapp.ui.screen.favourites.FavouritesFragment"
+        android:label="fragment_favourites"
+        tools:layout="@layout/fragment_favourites" >
+        <action
+            android:id="@+id/action_favouritesFragment_to_movieDetailFragment"
             app:destination="@id/movieDetailFragment" />
     </fragment>
 </navigation>
