--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -38,9 +38,10 @@
         <item name="fontWeight">300</item>
         <item name="android:textStyle">normal</item>
     </style>
-
     <style name="Theme.MovieApp.ShareBottomSheetDialogStyle">
         <item name="background">@color/share_bottom_sheet_dialog_bg_color_dark</item>
     </style>
-
+    <style name="Theme.MovieApp.FavouritesCardStyle">
+        <item name="background">@color/favourites_card_bg_color_dark</item>
+    </style>
 </resources>
