--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,5 +44,8 @@
     <style name="Theme.MovieApp.ShareBottomSheetDialogStyle">
         <item name="background">@color/share_bottom_sheet_dialog_bg_color</item>
     </style>
+    <style name="Theme.MovieApp.FavouritesCardStyle">
+        <item name="background">@color/favourites_card_bg_color</item>
+    </style>
 
 </resources>
