ISTAKIBI-6952 Android Eğitim ve Öğrenimi + Gereksiz kodları sildim + Viewall ve Movie detail sayfalarına top bar ekledim.

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -14,7 +14,6 @@
     <item
         android:id="@+id/favouritesFragment"
         android:title="@string/favourites_screen_title"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/ic_fav_unselected"
         />
-
 </menu>
