--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MovieApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="backgroundColor">@color/bg_color_dark</item>
     </style>
 
@@ -39,9 +37,16 @@
         <item name="android:textStyle">normal</item>
     </style>
     <style name="Theme.MovieApp.ShareBottomSheetDialogStyle">
-        <item name="background">@color/share_bottom_sheet_dialog_bg_color_dark</item>
+        <item name="background">@color/share_bottom_sheet_dialog_bg_color</item>
     </style>
     <style name="Theme.MovieApp.FavouritesCardStyle">
         <item name="background">@color/favourites_card_bg_color_dark</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="Theme.MovieApp.FavouritesCardHeaderStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="fontFamily">@font/inter_bold</item>
     </style>
 </resources>
