--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,19 +7,14 @@
     <color name="header_text_color_dark">#FFFFFF</color>
     <color name="bg_color">#FFFFFF</color>
     <color name="bg_color_dark">#2F2D2E</color>
-    <color name="menu_item_enabled_color">#84E6F8</color>
-    <color name="menu_item_disabled_color">#000000</color>
-    <color name="menu_item_enabled_color_dark">#84E6F8</color>
-    <color name="menu_item_disabled_color_dark">#FFFFFF</color>
     <color name="movie_detail_icons_color">#999AC6</color>
     <color name="movie_detail_icons_color_dark">#999AC6</color>
-    <color name="poster_placeholder_color">#84E6F8</color>
+    <color name="top_bar_bg_color">#ED6A5E</color>
+    <color name="poster_placeholder_color">#999AC6</color>
     <color name="content_color">@color/black</color>
     <color name="content_color_dark">@color/white</color>
-    <color name="add_watch_list_button_bg_color">#999AC6</color>
     <color name="share_button_bg_color">#999AC6</color>
-    <color name="share_bottom_sheet_dialog_bg_color">#999AC6</color>
-    <color name="share_bottom_sheet_dialog_bg_color_dark">#999AC6</color>
+    <color name="share_bottom_sheet_dialog_bg_color">#ED6A5E</color>
     <color name="favourites_card_bg_color">#2F2D2E</color>
     <color name="favourites_card_bg_color_dark">#FFFFFF</color>
 </resources>
