ISTAKIBI-6952 Android Eğitim ve Öğrenimi + Uygulamadaki kullanılmayan kaynakları sildim.

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -21,9 +21,11 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="10dp"
+            android:inputType="text"
             android:background="@drawable/outlined_edit_text"
             android:hint="@string/search_movie_hint"
             android:padding="10dp"
+            android:autofillHints="name"
             android:singleLine="true"
             app:layout_constraintEnd_toStartOf="@id/movieSearchBtn"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +38,7 @@
             android:layout_width="wrap_content"
             android:padding="10dp"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/search_movie"
             android:background="@drawable/circle_button_background"
             android:backgroundTint="@color/share_bottom_sheet_dialog_bg_color"
             android:src="@drawable/ic_search"
