--- a/app/src/main/res/layout/favourites_list_item.xml
+++ b/app/src/main/res/layout/favourites_list_item.xml
@@ -21,7 +21,7 @@
             android:layout_width="125dp"
             android:layout_height="175dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_background"
+            android:contentDescription="@string/movie_poster_content_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,6 @@
             style="@style/Theme.MovieApp.FavouritesCardHeaderStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Lord of The Rings : The Return of The King"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/moviePosterImg"
@@ -49,6 +48,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:contentDescription="@string/movie_poster_content_description"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
