--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -20,6 +20,7 @@
             android:id="@+id/backBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/back"
             android:layout_marginVertical="10dp"
             android:layout_marginStart="10dp"
             android:src="@drawable/ic_back"
@@ -35,7 +36,6 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="10dp"
             android:textColor="@color/white"
-            android:text="Lord of the rings"
             app:layout_constraintStart_toEndOf="@+id/backBtn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/favouriteCheckbox"
@@ -105,7 +105,7 @@
                             android:id="@+id/timeImg"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:contentDescription="icon"
+                            android:contentDescription="@string/icon"
                             android:scaleType="centerCrop"
                             android:src="@drawable/ic_time"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -117,8 +117,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             style="@style/Theme.MovieApp.ContentStyle"
-                            android:textFontWeight="400"
-                            android:text="157 minutes"
                             app:layout_constraintBottom_toBottomOf="@+id/timeImg"
                             app:layout_constraintStart_toEndOf="@+id/timeImg"
                             app:layout_constraintTop_toTopOf="@+id/timeImg" />
@@ -126,7 +124,7 @@
                             android:id="@+id/calendarImg"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:contentDescription="icon"
+                            android:contentDescription="@string/icon"
                             android:scaleType="centerCrop"
                             android:src="@drawable/ic_calendar"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -140,7 +138,6 @@
                             android:layout_height="wrap_content"
                             style="@style/Theme.MovieApp.ContentStyle"
                             android:layout_marginStart="10dp"
-                            android:text="2023-11-15"
                             app:layout_constraintBottom_toBottomOf="@+id/calendarImg"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/calendarImg" />
@@ -184,6 +181,7 @@
                         android:text="@string/share_button_text"
                         android:background="@drawable/circle_button_background"
                         android:backgroundTint="@color/share_button_bg_color"
+                        android:contentDescription="@string/share_button_text"
                         android:padding="5dp" />
                     <TextView
                         android:id="@+id/similarMoviesTxt"
