--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,150 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="921.6"
+    android:viewportHeight="921.6">
+  <group android:scaleX="0.7"
+      android:scaleY="0.7"
+      android:translateX="138.24"
+      android:translateY="138.24">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M0,0h921.6v921.6h-921.6z"
+        android:strokeWidth="0"
+        android:fillColor="#ff9494"/>
+    <path
+        android:pathData="M258.14,345.69m-43.65,0a43.65,43.65 0,1 1,87.31 0a43.65,43.65 0,1 1,-87.31 0"
+        android:fillColor="#606060"/>
+    <path
+        android:pathData="M716.8,397.66l0,229.61l-41.88,41.88l-418.62,0l-41.8,-41.88l0,-229.61z"
+        android:fillColor="#F0EFEF"/>
+    <path
+        android:pathData="M316.33,349.51l-24.27,48.17l68.21,0l24.27,-48.17z"
+        android:fillColor="#F5EFBB"/>
+    <path
+        android:pathData="M658.37,397.68l58.37,0l0,-48.17l-34.11,0z"
+        android:fillColor="#3F3F3F"/>
+    <path
+        android:pathData="M438.43,349.51l-24.27,48.17l68.21,0l24.27,-48.17z"
+        android:fillColor="#6EB9D2"/>
+    <path
+        android:pathData="M560.53,349.51l-24.27,48.17l68.21,0l24.27,-48.17z"
+        android:fillColor="#FAFAFB"/>
+    <path
+        android:pathData="M262.4,349.53l-18.77,37.31l-5.45,10.83l-24.71,0l0,-48.14z"
+        android:fillColor="#3F3F3F"/>
+    <path
+        android:pathData="M628.75,349.51l-24.27,48.17l53.89,0l24.27,-48.17z"
+        android:fillColor="#648A7B"/>
+    <path
+        android:pathData="M506.64,349.51l-24.27,48.17l53.89,0l24.27,-48.17z"
+        android:fillColor="#C15670"/>
+    <path
+        android:pathData="M384.54,349.51l-24.27,48.17l53.89,0l24.27,-48.17z"
+        android:fillColor="#69865C"/>
+    <path
+        android:pathData="M262.44,349.51l-24.27,48.17l53.89,0l24.27,-48.17z"
+        android:fillColor="#648A7B"/>
+    <path
+        android:pathData="M621.17,269.38l-66.99,13.16l-33.05,-42.6l66.91,-13.16z"
+        android:fillColor="#FAFAFB"/>
+    <path
+        android:pathData="M261.76,340.14l-47.09,9.31l-0.56,0.08l-9.31,-47.25l23.83,-4.73l4.01,-0.8l6.5,9.71z"
+        android:fillColor="#3F3F3F"/>
+    <path
+        android:pathData="M501.31,292.97l-40.51,7.94l-26.39,5.21l-33.13,-42.52l59.53,-11.79l7.46,-1.44z"
+        android:fillColor="#6EB9D2"/>
+    <path
+        android:pathData="M381.54,316.55l-66.91,13.16l-33.13,-42.52l66.91,-13.24z"
+        android:fillColor="#F5EFBB"/>
+    <path
+        android:pathData="M708.94,252.05l-34.74,6.9l-0.72,-0.72l-42.68,-39.87l10.11,-2.01l53.19,-10.51l5.54,-1.04l1.6,8.18z"
+        android:fillColor="#3F3F3F"/>
+    <path
+        android:pathData="M314.63,329.71l-14.84,2.97l-38.03,7.46l-25.19,-32.33l-7.94,-10.27l4.01,-0.8l48.86,-9.55z"
+        android:fillColor="#648A7B"/>
+    <path
+        android:pathData="M434.41,306.12l-52.87,10.43l-33.13,-42.6l52.87,-10.35z"
+        android:fillColor="#69865C"/>
+    <path
+        android:pathData="M554.18,282.54l-52.87,10.43l-33.05,-42.6l52.87,-10.43z"
+        android:fillColor="#C15670"/>
+    <path
+        android:pathData="M674.04,258.95l-52.87,10.43l-33.13,-42.6l42.76,-8.42l10.11,-2.01l32.57,41.88l0.16,0.16z"
+        android:fillColor="#648A7B"/>
+    <path
+        android:pathData="M228.68,322.67m-6.13,0a6.13,6.13 0,1 1,12.25 0a6.13,6.13 0,1 1,-12.25 0"
+        android:fillColor="#F0E1B7"/>
+    <path
+        android:pathData="M228.68,374.52m-6.13,0a6.13,6.13 0,1 1,12.25 0a6.13,6.13 0,1 1,-12.25 0"
+        android:fillColor="#F0E1B7"/>
+    <path
+        android:pathData="M287.94,440.46h355.38v71.78h-355.38z"
+        android:fillColor="#454444"/>
+    <path
+        android:pathData="M322.81,457.99l-8.82,6.34v7.06l8.82,-6.34v28.88h7.86v-35.94L322.81,457.99z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M343.67,457.99v11.55h7.54v-5.62h11.31l-13.96,30h8.58l13.96,-30v-5.94L343.67,457.99z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M377.61,486.47v7.46h9.06v-7.46L377.61,486.47z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M405.77,457.99l-8.74,6.34v7.06l8.74,-6.34v28.88h7.86v-35.94L405.77,457.99z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M448.85,476.36c0.72,-0.72 1.36,-1.36 1.93,-2.01c0.56,-0.64 1.04,-1.28 1.44,-1.92c0.4,-0.64 0.72,-1.28 0.88,-1.92c0.24,-0.72 0.32,-1.52 0.32,-2.41c0,-1.61 -0.32,-3.05 -0.96,-4.33c-0.64,-1.28 -1.52,-2.41 -2.73,-3.29c-1.12,-0.88 -2.49,-1.6 -4.09,-2.09c-1.68,-0.48 -3.37,-0.72 -5.3,-0.72c-1.85,0 -3.61,0.24 -5.21,0.72c-1.52,0.48 -2.97,1.12 -4.17,2.09c-1.12,0.88 -2.09,2.01 -2.73,3.29c-0.72,1.28 -1.04,2.73 -1.04,4.41h7.86c0,-0.88 0.16,-1.61 0.48,-2.17c0.32,-0.64 0.72,-1.12 1.2,-1.45c0.48,-0.32 1.04,-0.64 1.68,-0.72c0.64,-0.16 1.28,-0.24 1.92,-0.24c1.68,0 2.97,0.4 3.85,1.2c0.88,0.8 1.36,1.92 1.36,3.29c0,0.8 -0.16,1.52 -0.56,2.16c-0.32,0.64 -0.88,1.37 -1.68,2.17l-16.13,15.56v5.94h26.23v-5.94h-16.69L448.85,476.36z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M460.64,486.47v7.46h8.98v-7.46L460.64,486.47z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M502.2,463.85c-0.64,-1.36 -1.61,-2.49 -2.81,-3.37c-1.2,-0.96 -2.57,-1.6 -4.17,-2.09c-1.61,-0.48 -3.29,-0.72 -4.97,-0.72c-1.85,0 -3.45,0.24 -5.05,0.72c-1.61,0.48 -2.97,1.12 -4.17,2.09c-1.2,0.88 -2.17,2.01 -2.89,3.37c-0.72,1.28 -1.04,2.81 -1.04,4.57v15.08c0,1.68 0.32,3.21 1.04,4.57c0.72,1.36 1.68,2.49 2.89,3.37c1.2,0.88 2.57,1.6 4.17,2.09c1.61,0.4 3.21,0.64 5.05,0.64c1.68,0 3.37,-0.24 4.97,-0.64c1.61,-0.48 2.97,-1.2 4.17,-2.09c1.2,-0.88 2.17,-2.01 2.81,-3.37c0.72,-1.36 1.12,-2.89 1.12,-4.57L503.32,468.42C503.32,466.66 502.92,465.13 502.2,463.85zM495.46,483.5c0,1.44 -0.48,2.65 -1.45,3.53c-0.96,0.88 -2.25,1.28 -3.77,1.28c-1.61,0 -2.89,-0.4 -3.85,-1.28c-0.96,-0.88 -1.44,-2.09 -1.44,-3.53v-15c0,-1.52 0.48,-2.73 1.44,-3.61c0.96,-0.88 2.25,-1.28 3.85,-1.28c1.52,0 2.81,0.4 3.77,1.28c0.96,0.88 1.45,2.09 1.45,3.61L495.46,483.5z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M521.61,457.99l-8.74,6.34v7.06l8.74,-6.34v28.88h7.86v-35.94L521.61,457.99z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M543.59,486.47v7.46h9.06v-7.46L543.59,486.47z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M585.23,463.85c-0.72,-1.36 -1.68,-2.49 -2.89,-3.37c-1.12,-0.96 -2.57,-1.6 -4.17,-2.09c-1.61,-0.48 -3.21,-0.72 -4.97,-0.72c-1.76,0 -3.45,0.24 -5.05,0.72c-1.52,0.48 -2.97,1.12 -4.17,2.09c-1.2,0.88 -2.17,2.01 -2.81,3.37c-0.72,1.28 -1.12,2.81 -1.12,4.57v15.08c0,1.68 0.4,3.21 1.12,4.57c0.64,1.36 1.61,2.49 2.81,3.37c1.2,0.88 2.65,1.6 4.17,2.09c1.6,0.4 3.29,0.64 5.05,0.64c1.76,0 3.37,-0.24 4.97,-0.64c1.6,-0.48 3.05,-1.2 4.17,-2.09c1.2,-0.88 2.17,-2.01 2.89,-3.37c0.72,-1.36 1.04,-2.89 1.04,-4.57L586.27,468.42C586.27,466.66 585.95,465.13 585.23,463.85zM578.41,483.5c0,1.44 -0.48,2.65 -1.44,3.53c-0.96,0.88 -2.17,1.28 -3.77,1.28c-1.6,0 -2.81,-0.4 -3.85,-1.28c-0.96,-0.88 -1.44,-2.09 -1.44,-3.53v-15c0,-1.52 0.48,-2.73 1.44,-3.61c1.04,-0.88 2.25,-1.28 3.85,-1.28c1.61,0 2.81,0.4 3.77,1.28c0.96,0.88 1.44,2.09 1.44,3.61L578.41,483.5z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M617.96,478.29c-1.12,-1.28 -2.41,-2.25 -3.93,-2.97c1.36,-0.64 2.57,-1.52 3.53,-2.65c0.88,-1.2 1.36,-2.73 1.36,-4.73c0,-1.44 -0.32,-2.89 -0.96,-4.09c-0.64,-1.28 -1.52,-2.41 -2.73,-3.29c-1.12,-0.88 -2.57,-1.6 -4.17,-2.09c-1.61,-0.56 -3.37,-0.8 -5.22,-0.8c-1.85,0 -3.53,0.24 -5.13,0.72c-1.61,0.48 -2.97,1.12 -4.17,2.01c-1.12,0.88 -2.09,1.92 -2.81,3.21c-0.72,1.28 -1.04,2.73 -1.12,4.33h7.86c0.08,-1.36 0.64,-2.49 1.61,-3.21c1.04,-0.8 2.25,-1.12 3.77,-1.12c1.36,0 2.65,0.4 3.69,1.12c1.04,0.8 1.52,1.92 1.52,3.45c0,1.28 -0.4,2.33 -1.2,3.21c-0.88,0.88 -2.25,1.28 -4.25,1.28h-1.12v5.7h1.12c2.01,0 3.45,0.48 4.49,1.36c1.04,0.88 1.61,2.09 1.61,3.61c0,1.6 -0.56,2.81 -1.61,3.69c-1.12,0.88 -2.49,1.28 -4.25,1.28c-0.72,0 -1.44,-0.08 -2.17,-0.32c-0.72,-0.16 -1.36,-0.4 -1.85,-0.8c-0.56,-0.4 -0.96,-0.88 -1.28,-1.52c-0.32,-0.56 -0.48,-1.28 -0.56,-2.09h-7.86c0.08,1.92 0.48,3.53 1.2,4.81c0.8,1.36 1.85,2.49 3.05,3.29c1.28,0.88 2.73,1.52 4.41,1.92c1.61,0.4 3.29,0.56 5.05,0.56c1.93,0 3.69,-0.16 5.3,-0.64c1.68,-0.4 3.13,-1.04 4.33,-2.01c1.28,-0.88 2.25,-2.01 2.97,-3.29c0.72,-1.36 1.12,-2.97 1.12,-4.73C619.57,481.34 619.01,479.57 617.96,478.29z"
+        android:fillColor="#E3354E"/>
+    <path
+        android:pathData="M240.51,547.6L690.76,547.6"
+        android:strokeWidth="0.00512"
+        android:fillColor="#00000000"
+        android:strokeColor="#648A7B"/>
+    <path
+        android:pathData="M382.61,559.02L382.61,634.06"
+        android:strokeWidth="0.00512"
+        android:fillColor="#00000000"
+        android:strokeColor="#648A7B"/>
+    <path
+        android:pathData="M548.66,559.02L548.66,634.06"
+        android:strokeWidth="0.00512"
+        android:fillColor="#00000000"
+        android:strokeColor="#648A7B"/>
+    <path
+        android:pathData="M624.84,575.18l5.3,16.32l17.16,0l-13.88,10.08l5.3,16.32l-13.88,-10.08l-13.88,10.08l5.3,-16.32l-13.88,-10.08l17.16,0z"
+        android:fillColor="#CACED5"/>
+    <path
+        android:pathData="M460.8,397.68l0,271.43l214.1,0l41.89,-41.88l0,-229.55z"
+        android:strokeAlpha="0.1"
+        android:fillColor="#040000"
+        android:fillAlpha="0.1"/>
+    <path
+        android:pathData="M674.2,258.95l-0.56,-0.56l0.4,0.56l-52.87,10.43l-66.99,13.16l-52.87,10.43l-40.51,7.94l0,-49.1l7.46,-1.44l52.87,-10.43l66.91,-13.16l42.76,-8.42l10.11,-2.01l53.19,-10.51l5.54,-1.04l1.6,8.18l7.7,39.07z"
+        android:strokeAlpha="0.1"
+        android:fillColor="#040000"
+        android:fillAlpha="0.1"/>
+    <path
+        android:pathData="M536.27,397.68l68.21,0l53.89,0l58.37,0l0,-48.17l-34.11,0l-53.89,0l-68.21,0l-53.89,0l-45.84,0l0,48.17l21.58,0z"
+        android:strokeAlpha="0.1"
+        android:fillColor="#040000"
+        android:fillAlpha="0.1"/>
+  </group>
 </vector>
