--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.screen.favourites.FavouritesFragment">
     <FrameLayout
-        android:id="@+id/profileTopbar"
+        android:id="@+id/profileTopBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileTopbar">
+        app:layout_constraintTop_toBottomOf="@+id/profileTopBar">
         <ProgressBar
             android:id="@+id/loadingProgressBar"
             android:layout_width="wrap_content"
