--- a/app/src/main/res/layout/fragment_view_all.xml
+++ b/app/src/main/res/layout/fragment_view_all.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.screen.viewall.ViewAllFragment">
+    tools:context=".ui.screen.view_all.ViewAllFragment">
 
     <LinearLayout
         android:id="@+id/topBar"
