--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -3,14 +3,14 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/moviePosterCardView"
-        android:layout_width="125dp"
-        android:layout_height="175dp"
+        android:layout_width="@dimen/horizontal_layout_poster_width"
+        android:layout_height="@dimen/horizontal_layout_poster_height"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp">
         <ImageView
             android:id="@+id/moviePosterImg"
-            android:layout_width="125dp"
-            android:layout_height="175dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:contentDescription="@string/movie_poster_content_description"
             android:src="@drawable/ic_launcher_background" />
