--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,7 +7,7 @@
     <style name="Theme.MovieApp.HeaderTextView">
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/header_text_color_dark</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/header_text_size</item>
         <item name="fontFamily">@font/inter_bold</item>
     </style>
 
@@ -23,18 +23,21 @@
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textStyle">normal</item>
         <item name="fontWeight">500</item>
+        <item name="android:textSize">@dimen/subtitle_text_size</item>
     </style>
     <style name="Theme.MovieApp.ContentStyle">
         <item name="android:textColor">@color/content_color_dark</item>
         <item name="fontFamily">@font/inter_regular</item>
         <item name="fontWeight">400</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/content_text_size</item>
     </style>
     <style name="Theme.MovieApp.ThinContentStyle">
         <item name="android:textColor">@color/content_color_dark</item>
         <item name="fontFamily">@font/inter_light</item>
         <item name="fontWeight">300</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/content_text_size</item>
     </style>
     <style name="Theme.MovieApp.FavouritesCardStyle">
         <item name="background">@color/favourites_card_bg_color_dark</item>
@@ -43,7 +46,7 @@
     <style name="Theme.MovieApp.FavouritesCardHeaderStyle">
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/title_text_size</item>
         <item name="fontFamily">@font/inter_bold</item>
     </style>
 </resources>
