--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
     <style name="Theme.MovieApp.HeaderTextView">
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/header_text_color</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/header_text_size</item>
         <item name="fontFamily">@font/inter_bold</item>
     </style>
 
@@ -26,20 +26,21 @@
         <item name="fontFamily">@font/inter_medium</item>
         <item name="android:textStyle">normal</item>
         <item name="fontWeight">500</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/subtitle_text_size</item>
     </style>
     <style name="Theme.MovieApp.ContentStyle">
         <item name="android:textColor">@color/content_color</item>
         <item name="fontFamily">@font/inter_regular</item>
         <item name="fontWeight">400</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/content_text_size</item>
     </style>
     <style name="Theme.MovieApp.ThinContentStyle">
         <item name="android:textColor">@color/content_color</item>
         <item name="fontFamily">@font/inter_light</item>
         <item name="fontWeight">300</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textSize">@dimen/content_text_size</item>
     </style>
     <style name="Theme.MovieApp.FavouritesCardStyle">
         <item name="background">@color/favourites_card_bg_color</item>
@@ -47,7 +48,7 @@
     <style name="Theme.MovieApp.FavouritesCardHeaderStyle">
         <item name="color">@color/white</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/title_text_size</item>
         <item name="fontFamily">@font/inter_bold</item>
     </style>
 
